# FARMWISE

./: .coverage  .env.dist  .gitignore  README.md  api_utils.py  commits.txt  crud.py  environment.yml  imgw_api_read.py  logging_config.py  main.py  main_call.py  main_call_example.py  name_to_coordinates.py  quality_assess.py  req_ideas.txt  requirements.txt  scheduler.py  schemas.py  security.py  seeder.py  services.py  sql_schemas.py  test_call.py  user_database.py
constants/: imgw_coordinates.csv  imgw_raw.csv
internal-lib/hubeaupyutils/hubeaupyutils-main/: .gitignore  README.md  pyproject.toml
internal-lib/hubeaupyutils/hubeaupyutils-main/example/: getting_start.ipynb
internal-lib/hubeaupyutils/hubeaupyutils-main/src/hubeaupyutils.egg-info/: SOURCES.txt  top_level.txt
internal-lib/hubeaupyutils/hubeaupyutils-main/tests/: test_debug_v2.py  test_hubeaupyutils.py  test_mystatistics.py  test_wrapper.py
mappings/: data_source_mapping.py
routers/: auth.py  data_call.py  frontpage.py
static/: style.css
tests/: test_api_utils.py  test_cds_single_levels.py  test_cds_vegetation.py  test_cells_to_coordinates.py  test_coordinates_to_cells.py  test_corine_read.py  test_crud.py  test_data_operators.py  test_db_users.py  test_eea.py  test_egdi_read_d10.py  test_egdi_read_hc.py  test_generate_cells.py  test_geosphere.py  test_get_piezo_stations.py  test_gios_api_stations.py  test_gios_scraper.py  test_hashing_utils.py  test_hubeau_piezo_read.py  test_imgw_api_hydro_daily.py  test_imgw_api_synop_daily.py  test_imgw_utils.py  test_interpolate_data.py  test_main.py  (+10 more)
(+358 files in other folders)
