[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]

name = "hubeaupyutils"

dynamic = [
    "version",
    "dependencies"
]

authors = [
    {name = "Abel Henriot" , email = "a.henriot@brgm.fr"},
    {name = "Adrien Manlay", email = "a.manlay@brgm.fr" },
    {name = "Thibault Halllouin", email = "t.hallouin@brgm.fr" },
]

readme = {file = "README.md", content-type = "text/markdown"}   
description="A simple python tool to retrieve data from hubeau"


license = {file = "LICENSE"}

classifiers = [
    "Programming Language :: Python : 3",
    "License :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Hydrology",
]


requires-python = ">=3.6"

[project.urls]
Home = "https://gitlab.brgm.fr/brgm/si-eau/traitements-et-valorisations/hubeaupyutils"

[tool.setuptools.dynamic]
version = {attr = "hubeaupyutils.__version__"}
dependencies = {file = ["requirements.txt"]}
